[BFN] https://test.kuali.org/jira/browse/KRAFUNC-248 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6701 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-nonpersbudget.html
+++ b/kra-awa-dev/abud-nonpersbudget.html
@@ -202,13 +202,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td>$0.00</td>
                 </tr>
                 <tr>
-                  <th nowrap=nowrap><div align=right>&nbsp;Indirect Cost:</div></th>
+                  <th nowrap=nowrap><div align=right>F&amp;A Cost:</div></th>
                   <td><div align=left> 1,100.00</div></td>
                   <th nowrap=nowrap><div align=right>&nbsp;Cost Sharing:</div></th>
                   <td>$0.00</td>
                 </tr>
                 <tr>
-                  <th><div align=right>Total Requested Cost</div></th>
+                  <th><div align=right>Total Cost</div></th>
                   <td colspan="3"><div align=left> 8,496.00</div>                    <div align=left></div></td>   
                 </tr>
               </tbody>
