--- a/kra-awa-dev/abud-personnel.html
+++ b/kra-awa-dev/abud-personnel.html
@@ -271,13 +271,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div align=left>4,509.73</div></td>
                 </tr>
                 <tr>
-                  <th><div align=right>&nbsp;Indirect Cost:</div></th>
+                  <th><div align=right>F&amp;A Cost:</div></th>
                   <td><div align=left>19,409.40</div></td>
                   <th><div align=right>&nbsp;Cost Sharing:</div></th>
                   <td><div align=left>26,066.64</div></td>
                 </tr>
                 <tr>
-                  <th><div align=right>&nbsp;Total Requested Cost:</div></th>
+                  <th><div align=right>&nbsp;Total Cost:</div></th>
                   <td colspan=3>189,848.42</td>
                 </tr>
               </table>
