--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -119,10 +119,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
                 <th scope="col" >&nbsp; </th>
-                <th scope="col" > <label for="fiscal year"> Fiscal Year</label></th>
-                <th scope="col" > <label for="percentage"> Percentage</label></th>
-                <th scope="col" > <label for="source account"> Source Account</label></th>
-                <th scope="col" width="120" > <label for="amount"> Amount</label></th>
+                <th scope="col" > <label for="fiscal year">Fiscal Year</label></th>
+                <th scope="col" > <label for="percentage">Percentage</label></th>
+                <th scope="col" > <label for="source account">Source</label></th>
+                <th scope="col" width="120" > <label for="amount">Amount</label></th>
               </tr>
               <tr>
                 <th scope="col"> <div align="right"> 1</div></th>
@@ -212,12 +212,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </span> </div>
           <table cellpadding="0" cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
-                <th scope="col">&nbsp; </th>
-                <th scope="col"> <label for="fiscal year"> Fiscal Year</label></th>
-                <th scope="col"> <label for="rate"> Applicable Rate</label></th>
-                <th scope="col"> <label for="campus"> On Campus</label></th>
-                <th scope="col"> Source Account</th>
-                <th width="120" scope="col"> <label for="unrecovered f&amp;a">Amount</label></th>
+                <th scope="col">&nbsp;</th>
+                <th scope="col"><label for="fiscal year">Fiscal Year</label></th>
+                <th scope="col"><label for="rate">Applicable Rate</label></th>
+                <th scope="col"><label for="campus">On Campus</label></th>
+                <th scope="col">Source</th>
+                <th width="120" scope="col"><label for="unrecovered f&amp;a">Amount</label></th>
               </tr>
               <tr>
                 <th scope="col"> <div align="right"> 1</div></th>
