https://test.kuali.org/jira/browse/KRAFUNC-259
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6703 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-nonpersbudget.html
+++ b/kra-awa-dev/abud-nonpersbudget.html
@@ -1008,7 +1008,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <div id="globalbuttons" class="globalbuttons">
           <input name="methodToCall.calculateCurrentPeriod" src="../images/buttonsmall_calculateCurrent2.gif" class="nobord" alt="Calculate Current Period" type=image>
           <input name="methodToCall.save" src="../images/buttonsmall_save.gif" class="nobord" title="save" alt="save" type=image>
-          <input name="methodToCall.reload" src="../images/buttonsmall_reload.gif" onClick="excludeSubmitRestriction=true" class="nobord" title="reload" alt="reload" type=image>
+          <a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0"></a>
+<input name="methodToCall.reload" src="../images/buttonsmall_reload.gif" onClick="excludeSubmitRestriction=true" class="nobord" title="reload" alt="reload" type=image>
           <input name="methodToCall.close" src="../images/buttonsmall_close.gif" class="nobord" title="close" alt="close" type=image>
         </div>
         <script type="text/javascript">
