--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -395,7 +395,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div align="right"> <br>
           </div>
         <div class="globalbuttons"> <a href="#"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5"
-                            border="0"><img src="../images/buttonsmall_close.gif"
+                            border="0"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0"><img src="../images/buttonsmall_close.gif"
                                 alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif"
                                     alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
         <!--/div-->
