--- a/kra-awa-dev/abud-modular.html
+++ b/kra-awa-dev/abud-modular.html
@@ -305,7 +305,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       </div>
       <div align="right"><br>
         * required </div>
-      <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"><img src="../images/buttonsmall_sync.gif" alt="calculate current period" width="49" height="18" hspace="5" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+      <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0"></a><a href="#"><img src="../images/buttonsmall_sync.gif" alt="calculate current period" width="49" height="18" hspace="5" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
       </div></td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="blank" width="20" height="20"></td>
   </tr>
