--- a/kra-awa-dev/aw-medusahierarchyPA.html
+++ b/kra-awa-dev/aw-medusahierarchyPA.html
@@ -1314,7 +1314,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div align="right" style="margin-right:100px;"> <br>
   * required </div>
 <!-- GLOBAL DOCUMENT CONTROLS -->
-<div align="center"> <a href="#"> </a><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><img src="../images/buttonsmall_refresh.gif" alt="save" width="68" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a>
+<div align="center"> <a href="#"> </a><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0" /></a><img src="../images/buttonsmall_refresh.gif" alt="save" width="68" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a>
   <!--<a href="#"><img src="../images/searchicon.gif" width="16" height="16" border="0" alt="Search for Group" title="Search for Area of Research"></a>-->
 </div>
 </body>
