https://test.kuali.org/jira/browse/KRAFUNC-19
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6704 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -8082,7 +8082,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <option>Godfrey, Alberta D</option>
                           <option>Mays, Lyle</option>
                         </select>
-                      </div></td>
+                        <span style="border:none; width:20px; vertical-align:bottom;">
+                        <input name="x" src="../images/searchicon.gif" class="tinybutton" align="top" alt="Search " title="Search" type="image" />
+                        </span></div></td>
                     <td class="infoline"><div align="center">
                         <input name="startDate342" type="text" onchange="dataChanged()" value="" size="12" />
                       </div></td>
@@ -8106,7 +8108,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <option>Godfrey, Alberta D</option>
                           <option>Mays, Lyle</option>
                         </select>
-                      </div></td>
+                        <span style="border:none; width:20px; vertical-align:bottom;">
+                        <input name="x" src="../images/searchicon.gif" class="tinybutton" align="top" alt="Search " title="Search" type="image" />
+                        </span></div></td>
                     <td><input type="text" value="Detroit,Michigan" name="as1" style="width:98%;" /></td>
                     <td><input type="text" value="02/25/2008" name="zx1" style="width:98%;" /></td>
                     <td><input type="text" value="02/29/2008" name="er1" style="width:98%;" /></td>
@@ -8122,7 +8126,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <option selected="selected">Godfrey, Alberta D</option>
                           <option>Mays, Lyle</option>
                         </select>
-                      </div></td>
+                        <span style="border:none; width:20px; vertical-align:bottom;">
+                        <input name="x" src="../images/searchicon.gif" class="tinybutton" align="top" alt="Search " title="Search" type="image" />
+                        </span></div></td>
                     <td><input type="text" value="Oahu,Hawaii" name="qas1" style="width:98%;" /></td>
                     <td><input type="text" value="01/15/2008" name="qzx1" style="width:98%;" /></td>
                     <td><input type="text" value="04/08/2008" name="qer1" style="width:98%;" /></td>
