[BFN] small fix to https://test.kuali.org/jira/browse/KRAFUNC-244.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6714 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-budget.html
+++ b/kra-awa-dev/abud-budget.html
@@ -375,8 +375,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tr style="border-collapse:collapse;">
                     <td align="right" class="tab-subhead1" scope="row" style="border-collapse:collapse;">
                         <div align="center">
-                            <a href="#" id="A2" onclick="rend(this, false)">
-                            	<img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F2" vspace=0>
+                            <a href="#" id="A2b" onclick="rend(this, false)">
+                            	<img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F2b" vspace=0>
                             </a>
                         </div>
                     </td>
@@ -399,7 +399,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     	<a href="abud-parameters.html"><img src="../images/tinybutton-open.gif" style="border:none;" alt="open award budget" title="Open Award Budget" /></a>
                     </td>
                 </tr>
-                <tbody id="G2" style="display:none; border-right:none;">
+                <tbody id="G2b" style="display:none; border-right:none;">
                     <tr style="border-right:none; border-collapse:collapse;">
                         <th align="right" scope="row" style="border-collapse:collapse;">&nbsp;</th>
                         <td colspan="8" style="padding:0px; border-left:none;border-collapse:collapse;">
