--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -7722,7 +7722,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G634" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7749,7 +7749,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G345b" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7776,7 +7776,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G334" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7838,7 +7838,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G734" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7865,7 +7865,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G567b" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7892,7 +7892,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G994" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7919,7 +7919,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G884" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7946,7 +7946,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G774" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
@@ -7973,7 +7973,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody id="G664" style="display: none;">
                   <tr>
                     <th width="50">&nbsp;</th>
-                    <th><div align="left">Description</div></th>
+                    <th><div align="left">Description*</div></th>
                     <th width="50">Actions</th>
                   </tr>
                   <tr>
