https://test.kuali.org/jira/browse/KRAFUNC-97
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6720 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/2.html
+++ b/kra-awa-dev/2.html
@@ -1,1 +1,35 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title>Untitled Document</title><link href="../css/kuali_application.css" rel=stylesheet type="text/css"><link href="../css/kuali.css" rel=stylesheet type="text/css"></head><body> <div class="" id="headerarea" style="height:300px">   <div class="headerbox" style="position:relative; height:inherit">     <h2>About this Document     </h2>        <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px; width:100%">    <tbody><tr>          <th scope="row"><div align="right"> Doc Nbr:</div></th>          <td>&lt;value&gt;</td>          <th scope="row"><div align="right">Status:</div></th>          <td>&lt;value&gt;</td>        </tr>        <tr>          <th scope="row"><div align="right">Initiator:</div></th>          <td>&lt;value&gt;</td>  <th scope="row"><div align="right">Created:</div></th>          <td>&lt;value&gt;</td>        </tr>        <tr>          <th class="bord-l" scope="row"><div align="right">Sponsor Name:</div></th>          <td class="datacell-l">&lt;value&gt;</td>          <th class="bord-l" scope="row"><div align="right">PI:</div></th>          <td class="datacell-l">&lt;value&gt;</td>        </tr>        <tr>          <th class="bord-l" scope="row"><div align="right"> Award ID:</div></th>          <td class="datacell-l">&lt;value&gt;</td>          <th class="bord-l" scope="row"><div align="right">Version:</div></th>          <td class="datacell-l">&lt;value&gt;</td>        </tr>        <tr>          <th class="bord-l" scope="row"><div align="right">  Update by:</div></th>          <td class="datacell-l">&lt;value&gt;</td>          <th class="bord-l" scope="row"><div align="right">Last Updated:</div></th>          <td class="datacell-l">&lt;value&gt;</td>        </tr>      </tbody>    </table><br /><div align="center"><a href="#" class="jqmClose"><img src="../images/buttonsmall_close.gif" width="48" height="18" alt="close" /></a></div><br />  </div></div></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Untitled Document</title><link href="../css/kuali_application.css" rel=stylesheet type="text/css">
+<link href="../css/kuali.css" rel=stylesheet type="text/css">
+</head>
+
+<body>
+ <div class="" id="headerarea" style="height:300px">
+   <div class="headerbox">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+      <tr>
+        <th scope=row>PI: </th>
+        <td>Tester, Joe </td>
+        <th scope=row>Document ID:Status:</th>
+        <td>291607: new</td>
+      </tr>
+      <tr>
+        <th scope=row>Lead Unit: </th>
+        <td>Chemistry</td>
+        <th scope=row>Award ID: Account </th>
+        <td>000212-001:400100 </td>
+      </tr>
+      <tr>
+        <th class="bord-l" scope=row>Sponsor:</th>
+        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Last Update: </th>
+        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
+      </tr>
+    </table>
+  </div>
+</div>
+</body>
+</html>
