--- a/kra-awa-dev/abud-budactions.html
+++ b/kra-awa-dev/abud-budactions.html
@@ -28,25 +28,26 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="headerarea-kra" id="headerarea">
 <h1>Award Budget<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1><h1 class="hidden">tab name goes here (accessibility requirement)</h1>
     <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
-        <tr>
-          <th scope=row><div align=right>Document ID:</div></th>
-          <td>291607</td>
-          <th scope=row><div align=right>Status:</div></th>
-          <td>new</td>
-        </tr>
-        <tr>
-          <th scope=row><div align=right>Initiator:</div></th>
-          <td>&lt;User name&gt;</td>  <th scope=row><div align=right>Last Updated:</div></th>
-          <td>10:06 AM 03/30/2005</td>
-        </tr>
-        <tr>
-          <th class="bord-l" scope=row><div align=right>Budget Name:</div></th>
-          <td class="datacell-l">Budget A</td>
-          <th class="bord-l" scope=row><div align=right>Version:</div></th>
-          <td class="datacell-l">1</td>
-        </tr>
-      </table>
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+      <tr>
+        <th scope=row>PI: </th>
+        <td>Tester, Joe </td>
+        <th scope=row>Document ID:Status:</th>
+        <td>291607: new</td>
+      </tr>
+      <tr>
+        <th scope=row>Lead Unit: </th>
+        <td>Chemistry</td>
+        <th scope=row>Award ID: Account </th>
+        <td>000212-001:400100 </td>
+      </tr>
+      <tr>
+        <th class="bord-l" scope=row>Sponsor:</th>
+        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Last Update: </th>
+        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
+      </tr>
+    </table>
   </div>
 </div>
   <!--TABBED TOP NAVIGATION-->
