--- a/kra-awa-dev/abud-personnel.html
+++ b/kra-awa-dev/abud-personnel.html
@@ -27,24 +27,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <h1>Award Budget<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
   <h1 class="hidden">tab name goes here (accessibility requirement)</h1>
   <div class="headerbox">
-    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
-      <tr class="">
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Doc Nbr:</th>
-        <td>2585</td>
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Status:</th>
-        <td>SAVED</td>
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+      <tr>
+        <th scope=row>PI: </th>
+        <td>Tester, Joe </td>
+        <th scope=row>Document ID:Status:</th>
+        <td>291607: new</td>
       </tr>
-      <tr class="">
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Initiator:</th>
-        <td>quickstart</td>
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Created:</th>
-        <td>03:04 PM 09/06/2008</td>
+      <tr>
+        <th scope=row>Lead Unit: </th>
+        <td>Chemistry</td>
+        <th scope=row>Award ID: Account </th>
+        <td>000212-001:400100 </td>
       </tr>
-      <tr class="">
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Budget Name:</th>
-        <td>One</td>
-        <th rowspan=1 colspan=1 scope=row align=right>&nbsp; Version #:</th>
-        <td>1</td>
+      <tr>
+        <th class="bord-l" scope=row>Sponsor:</th>
+        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Last Update: </th>
+        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
       </tr>
     </table>
   </div>
