--- a/kra-awa-dev/aw-actions1.html
+++ b/kra-awa-dev/aw-actions1.html
@@ -84,9 +84,27 @@ Please wait... <img src="inc/busy.gif" alt="loading" />
 <form name="example"  method="post" action="">
 <div class="headerarea-kra" id="headerarea" style="height:30px">
   <h1>Award - Actions <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
-  <div class="headerbox" style="top: 12px; right:12px;">
-   <a href="#" class="ex2trigger">
- document informaion</a>
+  <div class="headerbox">
+    <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+      <tr>
+        <th scope=row>PI: </th>
+        <td>Tester, Joe </td>
+        <th scope=row>Document ID:Status:</th>
+        <td>291607: new</td>
+      </tr>
+      <tr>
+        <th scope=row>Lead Unit: </th>
+        <td>Chemistry</td>
+        <th scope=row>Award ID: Account </th>
+        <td>000212-001:400100 </td>
+      </tr>
+      <tr>
+        <th class="bord-l" scope=row>Sponsor:</th>
+        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Last Update: </th>
+        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
+      </tr>
+    </table>
   </div>
 </div>
   <!--TABBED TOP NAVIGATION-->
