--- a/kra-awa-dev/aw-medusahierarchyPA.html
+++ b/kra-awa-dev/aw-medusahierarchyPA.html
@@ -435,22 +435,22 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div class="headerbox">
     <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
       <tr>
-        <th scope=row><div align=right>Document Id:</div></th>
-        <td>291607</td>
-        <th scope=row><div align=right>Status:</div></th>
-        <td>new</td>
+        <th scope=row>PI: </th>
+        <td>Tester, Joe </td>
+        <th scope=row>Document ID:Status:</th>
+        <td>291607: new</td>
       </tr>
       <tr>
-        <th scope=row><div align=right>Initiator:</div></th>
-        <td>&lt;user name&gt;</td>
-        <th scope=row><div align=right>Last Updated:</div></th>
-        <td>10:06 AM 03/30/2005</td>
+        <th scope=row>Lead Unit: </th>
+        <td>Chemistry</td>
+        <th scope=row>Award ID: Account </th>
+        <td>000212-001:400100 </td>
       </tr>
       <tr>
-        <th class="bord-l" scope=row><div align=right>Award Name:</div></th>
-        <td class="datacell-l">Award A</td>
-        <th class="bord-l" scope=row><div align=right>Version:</div></th>
-        <td class="datacell-l">1</td>
+        <th class="bord-l" scope=row>Sponsor:</th>
+        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Last Update: </th>
+        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
       </tr>
     </table>
   </div>
