https://test.kuali.org/jira/browse/KRAFUNC-98
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6721 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/menu/kra_devref/centad.html
+++ b/menu/kra_devref/centad.html
@@ -76,8 +76,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <div class="body">
               <table border="0" cellpadding="2" cellspacing="0" >
                 <tr>
-                  <td nowrap class="disabled-text">Awards</td>
-                  <td><img src="../../images/add1.png" alt="add" width="16" height="16" border="0" align="absmiddle"> <img src="../../images/searchicon1.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
+                  <td nowrap class="">Awards</td>
+                  <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
                 </tr>
                 <tr>
                   <td nowrap class="disabled-text">Award Report Tracking</td>
