https://test.kuali.org/jira/browse/KRAFUNC-106
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6724 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -40,8 +40,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <td>000212-001:400100 </td>
       </tr>
       <tr>
-        <th class="bord-l" scope=row>Sponsor:</th>
-        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Sponsor:</th>  <td class="datacell-l">National Science Foun...</td>
         <th class="bord-l" scope=row>Last Update: </th>
         <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
       </tr>
@@ -117,7 +116,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
         </table>
 	<!-- Panel Content Div -->
-        <div class="tab-container" align="center" id="G301" style="display: none;">
+        <div class="tab-container" align="center" id="G301" style="display: nonee;">
         <!-- Panel Element: Comments -->
             <!-- Element Header: Comments -->
                 <div class="h2-container">
@@ -139,7 +138,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <!-- add line -->
                         <tr>
                           <th style="text-align:left;"><span style="width:100px; text-align:right;">Comments</span></th>
-                          <th width="20%" style="text-align:left;"><div align="center">Actions</div></th>
+                          <th width="10%" style="text-align:left;"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
                         	<td style="text-align:left;">
@@ -157,7 +156,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 
                             </td>
                             <td style="text-align:left;"><div align="center">
-                              <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-save1.gif" alt="save">
                               <input name="imageField2" type=image class="tinybutton" onClick="MM_openBrWindow('pop-notes-finhist.html','','scrollbars=yes,resizable=yes,width=600,height=480')" src="../images/tinybutton-viewhistory.gif" alt="view history">
                             </div></td>
                         </tr>
@@ -174,7 +172,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <!-- add line -->
                         <tr>
                           <th style="text-align:left;"><span style="width:100px; text-align:right;">Comments</span></th>
-                          <th width="20%" style="text-align:left;"><div align="center">Actions</div></th>
+                          <th width="10%" style="text-align:left;"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
                           <td style="text-align:left;"><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
@@ -184,7 +182,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </tr>
                           </table></td>
                           <td style="text-align:left;"><div align="center">
-                            <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-save1.gif" alt="save">
                             <input name="imageField2" type=image class="tinybutton" onClick="MM_openBrWindow('pop-notes-genhist.html','','scrollbars=yes,resizable=yes,width=600,height=480')" src="../images/tinybutton-viewhistory.gif" alt="view history">
                           </div></td>
                        	</tr>
@@ -201,7 +198,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <!-- add line -->
                         <tr>
                           <th style="text-align:left;"><span style="width:100px; text-align:right;">Comments</span></th>
-                          <th width="20%" style="text-align:left;"><div align="center">Actions</div></th>
+                          <th width="10%" style="text-align:left;"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
                           <td style="text-align:left;"><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
@@ -211,7 +208,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </tr>
                           </table></td>
                           <td style="text-align:left;"><div align="center">
-                            <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-save1.gif" alt="save">
                             <input name="imageField2" type=image class="tinybutton" onClick="MM_openBrWindow('pop-notes-inthist.html','','scrollbars=yes,resizable=yes,width=600,height=480')" src="../images/tinybutton-viewhistory.gif" alt="view history">
                           </div></td>
                        	</tr>
@@ -228,7 +224,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <!-- add line -->
                         <tr>
                           <th style="text-align:left;"><span style="width:100px; text-align:right;">Comments</span></th>
-                          <th width="20%" style="text-align:left;"><div align="center">Actions</div></th>
+                          <th width="10%" style="text-align:left;"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
                           <td style="text-align:left;"><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
@@ -238,7 +234,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </tr>
                           </table></td>
                           <td style="text-align:left;"><div align="center">
-                            <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-save1.gif" alt="save">
                             <input name="imageField2" type=image class="tinybutton" onClick="MM_openBrWindow('pop-notes-prochist.html','','scrollbars=yes,resizable=yes,width=600,height=480')" src="../images/tinybutton-viewhistory.gif" alt="view history">
                           </div></td>
                        	</tr>
@@ -255,7 +250,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <!-- add line -->
                         <tr>
                           <th style="text-align:left;"><span style="width:100px; text-align:right;">Comments</span></th>
-                          <th width="20%" style="text-align:left;"><div align="center">Actions</div></th>
+                          <th width="10%" style="text-align:left;"><div align="center">Actions</div></th>
                         </tr>
                         <tr>
                           <td style="text-align:left;"><table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
@@ -265,7 +260,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </tr>
                           </table></td>
                           <td style="text-align:left;"><div align="center">
-                            <input name="imageField2" type=image class="tinybutton" src="../images/tinybutton-save1.gif" alt="save">
                             <input name="imageField2" type=image class="tinybutton" onClick="MM_openBrWindow('pop-notes-prophist.html','','scrollbars=yes,resizable=yes,width=600,height=480')" src="../images/tinybutton-viewhistory.gif" alt="view history">
                           </div></td>
                        	</tr>
