--- a/kra-awa-dev/aw-specialreview.html
+++ b/kra-awa-dev/aw-specialreview.html
@@ -40,8 +40,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <td>000212-001:400100 </td>
       </tr>
       <tr>
-        <th class="bord-l" scope=row>Sponsor:</th>
-        <td class="datacell-l">National Science Foundation</td>
+        <th class="bord-l" scope=row>Sponsor:</th>  <td class="datacell-l">National Science Foun...</td>
         <th class="bord-l" scope=row>Last Update: </th>
         <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
       </tr>
