--- a/kra-awa-dev/pop-notes-finhist.html
+++ b/kra-awa-dev/pop-notes-finhist.html
@@ -53,7 +53,7 @@ function MM_goToURL() { //v3.0
                 <tr>
                   <td colspan="16" class="tab-subhead1" style="text-align:left;"><a href="#" id="ABFN01" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN01" /></a> 12/03/2008 </td>
                 </tr>
-                <tbody id="GBFN01" style="display:none;">
+                <tbody id="GBFN01" style="display:block;">
                   <!-- add line -->
                   <tr>
                     <th style="width:100px; text-align:right;">Comments:</th>
@@ -66,7 +66,7 @@ function MM_goToURL() { //v3.0
                 <tr>
                   <td colspan="16" class="tab-subhead1" style="text-align:left;"><a href="#" id="ABFN02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN02" /></a> 12/14/2008 </td>
                 </tr>
-                <tbody id="GBFN02" style="display:none;">
+                <tbody id="GBFN02" style="display:block;">
                   <!-- add line -->
                   <tr>
                     <th style="width:100px; text-align:right;">Comments:</th>
@@ -79,7 +79,7 @@ function MM_goToURL() { //v3.0
                 <tr>
                   <td colspan="16" class="tab-subhead1" style="text-align:left;"><a href="#" id="ABFN03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN03" /></a> 01/09/2009</td>
                 </tr>
-                <tbody id="GBFN03" style="display:none;">
+                <tbody id="GBFN03" style="display:block;">
                   <!-- add line -->
                   <tr>
                     <th style="width:100px; text-align:right;">Comments:</th>
@@ -92,7 +92,7 @@ function MM_goToURL() { //v3.0
                 <tr>
                   <td colspan="16" class="tab-subhead1" style="text-align:left;"><a href="#" id="ABFN04" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width="45" height="15" border="0" align="absmiddle" id="FBFN04" /></a> 04/22/2009</td>
                 </tr>
-                <tbody id="GBFN04" style="display:none;">
+                <tbody id="GBFN04" style="display:block;">
                   <!-- add line -->
                   <tr>
                     <th style="width:100px; text-align:right;">Comments:</th>
